--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "algorithm-test"]
-	path = algorithm-test
+[submodule "test/algorithm-test"]
+	path = test/algorithm-test
 	url = https://github.com/yosupo06/algorithm-test
